fix: bring public song submissions in line with the chat-contribution flow
Public/anonymous submissions (via the OTP-verified web form) previously
created orphaned fragments no station owner could ever see: the chosen
station was silently dropped (backend never read it), status didn't
match the value the received-inbox query filters on, and no RLS grant
was made to anyone but the acting SuperUser identity.

- createFromBulkUpload now takes a requiresApproval flag so it can be
  shared safely between this flow and the authenticated station-owner
  bulk-upload flow (which must stay untouched: self-owned content,
  no approval needed).
- Public submissions now get SourceType.CONTRIBUTION + LifecycleStatus
  NOT_APPROVED (matching the chatbot flow), an RLS grant to the chosen
  station's owner, and a silently resolved-or-created core user for the
  submitter's verified email (same pattern as
  ListenerService.ensureUserExists) so if they ever register for real
  with that email, they already have access to everything they
  submitted — no separate claim step needed.
- Fixed OtpService.isVerifyFail consuming the code on first successful
  check, which broke any multi-chunk upload (chunks >5MB) and "submit
  another track" after the first submission.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>